[package]
name = "mc-util-metrics"
version = "5.2.3"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
rust-version = { workspace = true }

[dependencies]
mc-common = { path = "../../common", features = ["log"] }

chrono = "0.4"
grpcio = "0.13"
lazy_static = "1.4"
prometheus = "0.13"
protobuf = "3.3.0"
serde_json = "1.0"
